K8s/1.5/multitool-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
