K8s/1.5/multitool-service.yml
apiVersion: v1
kind: Service
metadata:
  name: multitool-service
spec:
  selector:
    app: back
  ports:
    - name: multitool
      port: 9002
      targetPort: 8080
      protocol: TCP
