K8s/1.5/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: front
  ports:
    - name: nginx
      port: 9001 
      targetPort: 80
      protocol: TCP
